--- a/HTML/HTMLDocs/DataAccess/DataAccessSave.html
+++ b/HTML/HTMLDocs/DataAccess/DataAccessSave.html
@@ -120,10 +120,8 @@ GO</pre>
     <span class='xmlComment'>#region</span> Constructors
 
     <span class='xmlComment'>/// &lt;summary&gt;</span><span class="comment">Initializes an object instance.</span><span class="xmlComment">&lt;/summary&gt;</span>
-    <span class='xmlComment'>/// &lt;param name="</span>tableName<span class="xmlComment">"&gt;<span class="text">The Table name.</span>&lt;/param&gt;</span>
-    <span class='modifier'>public</span> PersonManager(string tableName = "Person")
+    <span class='modifier'>public</span> PersonManager()
     {
-      TableName = tableName;
       <span class='commonType'>var</span> dataSource = <span class='text'>"DBServiceName"</span>;
       <span class='commonType'>var</span> database = <span class='text'>"DBName"</span>;
       <span class='userType'>DataAccess</span> = <span class='userType'>DataCommon</span>.GetDataAccess(dataSource, database);
@@ -133,9 +131,27 @@ GO</pre>
     <span class='xmlComment'>#region</span> Public Methods
 
     <span class='xmlComment'>/// &lt;summary&gt;</span>
-    <span class='xmlComment'>/// <span class="comment">Executes the Select statement and retrieves the DataTable object.</span></span>
+    <span class='xmlComment'>/// </span><span class="comment">Get a DataColumn collection from the specified ColumnName values.</span>
     <span class='xmlComment'>/// &lt;/summary&gt;</span>
-    <span class='xmlComment'>/// &lt;returns&gt;</span><span class='comment'>The DataTable object.</span><span class='xmlComment'>&lt;/returns&gt;</span>
+    <span class='xmlComment'>/// &lt;param name="</span>columnNames<span class="xmlComment">"&gt;</span><span class="comment">The Column Name array.</span><span class="xmlComment">&lt;/param&gt;</span>
+    <span class='xmlComment'>/// &lt;returns&gt;</span><span class="comment">The DataColumn collection.</span><span class="xmlComment">&lt;/returns&gt;</span>
+    <span class='modifier'>public</span> <span class='userType'>DataColumnCollection</span> GetColumns(string[] columnNames = null)
+    {
+      <span class='userType'>DataColumnCollection</span> retValue;
+
+      <span class='userType'>DataTable</span> dataTable = GetSchemaOnly();
+      <span class='keyWord'>if</span> <span class='keyWord'>null</span>l == columnNames)
+      {
+        retValue = dataTable.Columns;
+      }
+      <span class='keyWord'>else</span>
+      {
+        retValue = <span class='userType'>DataCommon</span>.GetColumns(dataTable, columnNames);
+      }
+      <span class='keyWord'>return</span> retValue;
+    }
+
+    <span class='xmlComment'>/// &lt;summary&gt;</span><span class="comment">Executes the Select statement and retrieves the DataTable object.</span><span class="xmlComment">&lt;/summary&gt;</span>
     <span class='modifier'>public</span> <span class='userType'>DataTable</span> GetDataTable()
     {
       <span class='userType'>DataTable</span> retValue;
@@ -145,6 +161,19 @@ GO</pre>
       <span class='comment'>// The DataColumn names are the same as the Data Source</span>
       <span class='comment'>// Table Column Names or the SQL rename 'AS' name.</span>
       retValue = <span class='userType'>DataAccess</span>.GetDataTable(sql);
+      <span class='keyWord'>return</span> retValue;
+    }
+
+    <span class='xmlComment'>/// &lt;summary&gt;</span>
+    <span class='xmlComment'>///</span>
+    <span class='xmlComment'>/// &lt;/summary&gt;</span>
+    <span class='xmlComment'>/// &lt;returns&gt;&lt;/returns&gt;</span>
+    <span class='modifier'>public</span> <span class='userType'>DataTable</span> GetSchemaOnly()
+    {
+      <span class='userType'>DataTable</span> retValue;
+
+      <span class='commonType'>var</span> sql = GetSql();
+      retValue = <span class='userType'>DataAccess</span>.GetSchemaOnly(sql);
       <span class='keyWord'>return</span> retValue;
     }
     <span class='xmlComment'>#endregion</span>
@@ -158,11 +187,11 @@ GO</pre>
       <span class='commonType'>string</span> retValue;
 
       builder = <span class='keyWord'>new</span> <span class='userType'>StringBuilder</span>(128);
-      builder.AppendLine(<span class='text'>"select"</span>);
-      builder.AppendLine(<span class='text'>" ID,"</span>);
-      builder.AppendLine(<span class='text'>" Name,"</span>);
+      builder.AppendLine(<span class='text'>"select "</span>);
+      builder.AppendLine(<span class='text'>" ID, "</span>);
+      builder.AppendLine(<span class='text'>" Name, "</span>);
       builder.AppendLine(<span class='text'>" PrincipleFlag "</span>);
-      builder.AppendLine(<span class='text'>$"from {TableName};"</span>);
+      builder.AppendLine(<span class='text'>"from Person;"</span>);
       retValue = builder.ToString();
       <span class='keyWord'>return</span> retValue;
     }
@@ -172,9 +201,6 @@ GO</pre>
 
     <span class='comment'>// Gets or sets the DataAccess object.</span>
     <span class='modifier'>private</span> <span class='userType'>DataAccess</span> DataAccess { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
-
-    <span class='comment'>// Gets or sets the Table name.</span>
-    <span class='modifier'>private</span> <span class='commonType'>string</span> TableName { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
     <span class='xmlComment'>#endregion</span>
   }
 }</pre>
